--- a/index.html
+++ b/index.html
@@ -1,75 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AHMAD MINHAL</title>
     <style>
         body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            background: linear-gradient(to right, #6a11cb, #2575fc);
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            color: #333;
-        }
-        header {
-            background: rgba(255, 255, 255, 0.1);
+            background-image: url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d'); /* business meeting */
+            background-size: cover;
+            background-position: center;
             color: white;
-            padding: 30px;
             text-align: center;
-            font-size: 32px;
-            font-weight: bold;
-            backdrop-filter: blur(5px);
         }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-            animation: fadeIn 1.5s ease;
+        .overlay {
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 50px;
+            min-height: 100vh;
         }
-        h2 {
-            color: #2575fc;
-            margin-bottom: 15px;
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
         }
-        p {
-            font-size: 18px;
-            margin: 8px 0;
-        }
-        footer {
-            text-align: center;
+        .info {
+            font-size: 1.2rem;
+            background: rgba(255, 255, 255, 0.1);
+            display: inline-block;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            color: white;
-            margin-top: 50px;
-            font-size: 14px;
-            backdrop-filter: blur(5px);
-        }
-        @keyframes fadeIn {
-            from {opacity: 0; transform: translateY(20px);}
-            to {opacity: 1; transform: translateY(0);}
-       <meta name="google-site-verification" content="fNefHC1GrSgWIMhKkGEDIWWDSzGPd50Y32Wh1aHFJe8" />
+            border-radius: 10px;
         }
     </style>
 </head>
 <body>
-
-    <header>
-        AHMAD MINHAL
-    </header>
-
-    <div class="container">
-        <h2>About Me</h2>
-        <p><strong>Name:</strong> Ahmad Minhal</p>
-        <p><strong>From:</strong> Kizhisseri, Malappuram, India</p>
-        <p><strong>Age:</strong> 11</p>
-        <p><strong>Class:</strong> 6th Standard</p>
-        <p><strong>School:</strong> Markazul Uloom English Secondary School, Kondotty Ekapparamba</p>
+    <div class="overlay">
+        <h1>ABOUT AHMAD MINHAL</h1>
+        <div class="info">
+            <p><strong>Name:</strong> Ahmad Minhal</p>
+            <p><strong>Age:</strong> 11</p>
+            <p><strong>Grade:</strong> 6th Standard</p>
+            <p><strong>School:</strong> Markazul Uloom English Secondary School</p>
+        </div>
     </div>
-
-    <footer>
-        Made by Ahmad Minhal
-    </footer>
-
 </body>
 </html>
